# videogame-limiter

./: .gitignore  README.md  pyproject.toml  requirements.txt
videogame-limiter/: main.py  registry.py
videogame-limiter/tests/: __init__.py  test_registry.py
videogame_limiter/: app.py  main.py  registry.py
videogame_limiter/tests/: test_registry.py
