[tool.poetry]
name = "videogame_limiter"
version = "0.0.1"
description = "Limit video game playing."
authors = ["Graeme Cliffe"]

[dependencies]
kivy = "2.1.0"
steam = {version="1.2.0", extras=["client"]}

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[tool.black]
line-length = 88
target_version = ['py36']
