[tool.poetry]
name = "videogame_limiter"
version = "0.0.1"
description = "Limit video game playing."
authors = ["Graeme Cliffe"]

[tool.poetry.dependencies]
python = "3.8.*"
kivy = "2.1.0"
steam = {version="1.2.0", extras=["client"]}
winregistry = "1.1.1"

[tool.poetry.dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }
pytest = "^7.1"

[tool.black]
line-length = 88
